--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,15 @@
     <string name="setportfolio_info">Add as many themes as you would like!</string>
     <string name="add_theme">Add theme</string>
     <string name="read_more">Read more</string>
+    <string name="my_page">My page</string>
+    <string name="my_portfolio">My Portfolio</string>
+    <string name="settings">Settings</string>
+    <string name="logout_button">Logout</string>
+    <string name="notifications">Notifications</string>
+    <string name="email_notifications">E-Mail notifications</string>
+    <string name="push_notifications">Push Notifications</string>
+    <string name="account_settings">Account Settings</string>
+    <string name="language">Language</string>
+    <string name="english">English</string>
+    <string name="danish">Danish</string>
 </resources>
